--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "fuse.js": "^7.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
